# btoblas

./: .gitignore  Makefile.am  README.txt  build.sh  configure.ac  example_config.txt  make.inc
matlabKernels/: aatx_tri.m  axpby.m  batax.m  bicgstab_row.m  dgemv2sim.m  dgemv3_dep.m  gemver_dep.m  gemver_depsmall.m  gemver_outer.m  hesslazy.m  hessred.m  hesstest.m  howell_gemver.m  mmul.m  norm2.m  normalize.m  scale.m  tensor.m  tri_lazy.m  trmv_col_lower.m  trmv_col_upper.m  trmv_col_upper_trans.m  trmv_row_lower.m  trmv_row_upper.m  vadd_dep.m
src/: Makefile.am  analyze_graph.cpp  analyze_graph.hpp  build_graph.cpp  build_graph.hpp  code_gen.cpp  code_gen.hpp  compile.cpp  compile.hpp  cost_estimate.cpp  cost_estimate_common.hpp  cost_estimate_par.cpp  cost_estimate_sym.cpp  cost_estimate_tmp.cpp  enumerate.cpp  enumerate.hpp  enums.hpp  evolve.cpp  evolve.hpp  generate_code.cpp  generate_code.hpp  graph.hpp  graphQuery.cpp  graphQuery.hpp  iterator.cpp  iterator.hpp  lex.yy.cpp  md5.h  modelInfo.cpp  modelInfo.hpp  opt_decision.cpp  opt_decision.hpp  optimize_analysis.cpp  optimize_analysis.hpp  optimizers.cpp  optimizers.hpp  partition.cpp  partition.hpp  search_exhaustive.cpp  search_exhaustive.hpp  (+24 more)
src/memmodel_par/: build_machine.h  cost_par.h  memmodel_par.h  parallel_machines.h  tree_par.h
utils/: graph_lower.py  runList.py
