# define([AC_CACHE_LOAD], )dnl
# define([AC_CACHE_SAVE], )dnl

AC_INIT([btoblas], [1.4], [thomas.nelson@colorado.edu])
#AC_CONFIG_MACRO_DIR([m4])
AC_PROG_CXX
AC_PROG_YACC
AC_PROG_LEX
#AC_PROG_LIBTOOL
#BOOST_REQUIRE
#BOOST_PROGRAM_OPTIONS
#dnl AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([
  Makefile
  src/Makefile
])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])
AC_OUTPUT
